Initial working micro-ros communication

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,3 +10,13 @@ build_flags =
     
 platform_packages =
     framework-mbed @ ~6.51506.0
+
+board_microros_distro = humble
+board_microros_transport = custom
+board_microros_user_meta = colcon.meta
+lib_deps =
+    https://github.com/fictionlab/diff_drive_lib.git#1.3
+    https://github.com/fictionlab/micro_ros_platformio#mbed
+    https://github.com/byq77/encoder-mbed.git#dfac32c
+    https://github.com/byq77/drv88xx-driver-mbed.git#61854e8
+lib_compat_mode = off
