Add firmware_version script

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,15 @@
 [env:core2]
-platform = ststm32
-framework = mbed
+platform = ststm32@15.4.1
 board = core2
-
+framework = mbed
 build_flags = 
     -I$PROJECTSRC_DIR/TARGET_CORE2
     -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
     -D MBED_BUILD_PROFILE_RELEASE
-    
 platform_packages =
     framework-mbed @ ~6.51506.0
-
+extra_scripts = 
+	pre:scripts/firmware_version.py
 board_microros_distro = humble
 board_microros_transport = custom
 board_microros_user_meta = colcon.meta
