--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,6 +31,8 @@ jobs:
           key: ${{ runner.os }}-${{ hashFiles('**/lockfiles') }}
       - name: Set up Python
         uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
       - name: Install PlatformIO
         run: |
           python -m pip install --upgrade pip
