Fix motor controller

--- a/platformio.ini
+++ b/platformio.ini
@@ -6,6 +6,7 @@ build_flags =
     -I$PROJECTSRC_DIR/TARGET_CORE2
     -D PIO_FRAMEWORK_MBED_RTOS_PRESENT
     -D MBED_BUILD_PROFILE_RELEASE
+    -D USE_STM_DRV8848_DRIVER=1
 platform_packages =
     framework-mbed @ ~6.51506.0
 extra_scripts = 
