Use custom micro ros distribution

--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,12 @@ platform_packages =
     framework-mbed @ ~6.51506.0
 extra_scripts = 
 	pre:scripts/firmware_version.py
-board_microros_distro = humble
+board_microros_distro = humble-fictionlab
 board_microros_transport = custom
 board_microros_user_meta = colcon.meta
 lib_deps =
     https://github.com/fictionlab/diff_drive_lib.git#1.4
-    https://github.com/fictionlab/micro_ros_platformio#7b9b59c
+    https://github.com/fictionlab/micro_ros_platformio#fictionlab-v2
     https://github.com/byq77/encoder-mbed.git#dfac32c
     https://github.com/byq77/drv88xx-driver-mbed.git#61854e8
 lib_compat_mode = off
