--- a/platformio.ini
+++ b/platformio.ini
@@ -8,15 +8,15 @@ build_flags =
     -D MBED_BUILD_PROFILE_RELEASE
     -D USE_STM_DRV8848_DRIVER=1
 platform_packages =
-    framework-mbed @ ~6.51506.0
+    framework-mbed @ http://files.fictionlab.pl/framework-mbed.zip
 extra_scripts = 
 	pre:scripts/firmware_version.py
-board_microros_distro = humble
+board_microros_distro = humble-fictionlab
 board_microros_transport = custom
 board_microros_user_meta = colcon.meta
 lib_deps =
     https://github.com/fictionlab/diff_drive_lib.git#1.4
-    https://github.com/fictionlab/micro_ros_platformio#7b9b59c
+    https://github.com/fictionlab/micro_ros_platformio#fictionlab-v2
     https://github.com/byq77/encoder-mbed.git#dfac32c
     https://github.com/byq77/drv88xx-driver-mbed.git#61854e8
 lib_compat_mode = off
