Update Mbed framework package

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@ build_flags =
     -D MBED_BUILD_PROFILE_RELEASE
     -D USE_STM_DRV8848_DRIVER=1
 platform_packages =
-    framework-mbed @ http://files.fictionlab.pl/framework-mbed.zip
+    framework-mbed @ http://files.fictionlab.pl/pio/framework-mbed-6.51506.231105.zip
 extra_scripts = 
 	pre:scripts/firmware_version.py
 board_microros_distro = humble-fictionlab
